--- a/example/templates/index.html
+++ b/example/templates/index.html
@@ -19,5 +19,8 @@
                 <input type="submit"/>
             </form>
         </div>
+        <script>
+           console.log(crumb)
+        </script>
     </body>
 </html>
