--- a/example/templates/message.html
+++ b/example/templates/message.html
@@ -7,5 +7,8 @@
         <div>
             <h1>Your message: {{message}}</h1>
         </div>
+        <script>
+            console.log(crumb)
+         </script>
     </body>
 </html>
